--- a/templates/report-nav.html
+++ b/templates/report-nav.html
@@ -15,7 +15,7 @@
         <li><a href="">Last Three Years </a></li>
         <li><a href="">In-House</a></li>
         <li><a href="">Out-House</a></li>
-        <li><a href="{{ url_for('year_end_summary_report') }}">Year Summary</a></li>
+        <li><a href="{{ url_for('report.year_end_summary_report') }}">Year Summary</a></li>
         <li><a href="">Roll Wise Report</a></li>
         <li><a href="">Company Summary</a></li>
     </ul>
